force-app/main/default/objects/ADP_Strategy_Review__c/ADP_Strategy_Review__c.object-meta.xml
<CustomObject>
    <label>ADP Strategy Review</label>
    <nameField>
        <displayFormat>ADP-SR-{MM}-{000}</displayFormat>
        <label>ADP Strategy Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP Strategy Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>