force-app/main/default/objects/ADP_Strategy_Review__c/fields/ADP_Objective__c.field-meta.xml
<CustomField>
    <fullName>ADP_Objective__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ADP Objective</label>
    <referenceTo>ADP_Objective__c</referenceTo>
    <relationshipLabel>ADP Strategy Reviews</relationshipLabel>
    <relationshipName>ADP_Strategy_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>