force-app/main/default/objects/ADP_Strategy_Review__c/fields/ADP_Review__c.field-meta.xml
<CustomField>
    <fullName>ADP_Review__c</fullName>
    <label>ADP Review</label>
    <referenceTo>ADP_Review__c</referenceTo>
    <relationshipLabel>ADP Strategy Reviews</relationshipLabel>
    <relationshipName>ADP_Strategy_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>