force-app/main/default/objects/ADP_Strategy_Review__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>ADP Strategy Reviews</relationshipLabel>
    <relationshipName>ADP_Strategy_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>