force-app/main/default/objects/ADP_Strategy_Review__c/fields/Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Review_Type__c</fullName>
    <label>Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADP Objective</fullName>
            </value>
            <value>
                <fullName>Campagin</fullName>
            </value>
            <value>
                <fullName>Route to Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>