force-app/main/default/objects/ADP_Strategy_Review__c/fields/Route_to_Market__c.field-meta.xml
<CustomField>
    <fullName>Route_to_Market__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route to Market</label>
    <referenceTo>Route_to_Market__c</referenceTo>
    <relationshipLabel>ADP Strategy Reviews</relationshipLabel>
    <relationshipName>ADP_Strategy_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>